# Princess-connection-farm

./: .gitignore  40_1.txt  40_2.txt  40_3.txt  40_huizhang.txt  40_x.txt  40to1 copy.py  40to1.py  40to1x.py  AccountRecord.txt  AutoStart.py  Automator.py  AutomatorS.py  BCR农场.xlsx  CreateUser.py  DataCenter.py  INI文件配置解读.md  LICENSE  MoveRecord.py  PCRMoves.py  README.md  StableReadme.md  accountlog.py  app.py  atxutils.py  baiduocr.txt  chongmingming.py  chushihua.py  config.ini  cv.py  debug_fs.py  dixiacheng.py  emulator_config.json  emulator_port.py  gettili.py  goumaimana.py  guild_40to1.py  idcard.json  img_helper.py  initialize.py  (+27 more)
.github/workflows/: node.js.yml
40to1_resource/: goto_guild1_task.txt  goto_guild2_task.txt  guild_setting.py  remove_guild_task.txt
AutomatorMixins/: _Base.py  _Hanghui.py
_deprecated/: CreateUser.py  initialize.py
adb/: NOTICE.txt  README.md  README.txt
adb/systrace/: UPSTREAM_REVISION  systrace.py
api/constants/: errors.py  reply.py
api/route/: account.py  batch.py  clan.py  ocr.py  schedule.py  subtask.py  task.py
api/schema/: account.py
automator_mixins/: _async.py  _base.py  _captcha.py  _dxc.py  _dxc_base.py  _enhance.py  _fight_base.py  _get_screen.py  _hanghui.py  _haoyou.py  _huizhan.py  _jjc.py  _juqing.py  _login.py  _routine.py  _shop.py  _shuatu.py  _shuatu_base.py  _tools.py
core/: Automator.py  AutomatorS.py  MoveRecord.py  PCRMoves.py  accountlog.py  atxutils.py  bot.py  constant.py  cv.py  emulator_config.json  emulator_port.py  get_screen.py  initializer.py  launcher.py  log_handler.py  pcr_checker.py  pcr_config.py  richutils.py  safe_u2.py  tkutils.py  usercentre.py  utils.py  valid_task.py
data/: data.db
developutils/: screencut.py
docs/: AboutUpdater.md  INI文件配置解读.md  Scene框架的使用.md  [开发] Scene框架的使用.md  introduce_to_schedule.md  login_guide.md  switch_guide.md  tutorial.md  如何接入打码平台.md  比较好上手的项目开发手册.md
guild_40to1_resource/: README.md  account_guild2.txt  goto_guild1_task.txt  goto_guild2_task.txt  guild_setting.py
pcrdata/: pcrdata.py  sample_xlsx.xlsx
pcrocr/: all_fonts.txt  app_test.py  dataset.py  get_real_pic.py  label_basic.txt  model.py  ocr.py  test_1.py  test_getocrpic.py  test_multi_models.py  train_and_finetuning.py  utils.py
sample_customtask/: empty_sample.py  sample_task.py  tasklist_sample.py
scenes/: downloading_data.py  errors.py  scene_base.py
scenes/caravan/: caravan.py  caravan_event.py
scenes/clan/: clan_battle.py  clan_manage.py
scenes/dxc/: dxc_fight.py  dxc_select.py
scenes/fight/: auto_advance_settings.py  buy_ap.py  fightbianzu_base.py  fightbianzu_zhuxian.py  fightinfo_base.py  fightinfo_zhuxian.py  fighting_base.py  (+1 more)
switches/: dxc3.json  hz.json  no_guild.json  shengji.json
tasks_example/: 日常领取+捐赠+ocr地下城.txt  日常领取+捐赠+非ocr地下城.txt
webclient/: .babelrc  README.md  index.html  package-lock.json  package.json  webpack.config.js
webui/: advanced_tab.py  main_page.py  pcr_api.py  pcr_component.py  view.py
xls/: pcr_farm_info.xlsx
(+74 files in other folders)
