[tool.poetry]
name = "princess-connection-farm-master"
version = "2.8.20240316"
description = "An automated farming script for Princess Connect! Re:dive (Simplified Chinese Ver.)"
authors = ["Your Name <you@example.com>"]
license = "GPLV3"

[tool.poetry.dependencies]
python = ">=3.8"
adbutils = "^0.13.1"
websocket-client = "0.57.0"
pandas = "^1.4.0"
openpyxl = "^3.0.9"
gevent = "^21.12.0"
psutil = "^5.9.0"
baidu-aip = "2.2.18.0"
matplotlib = "^3.5.1"
opencv-python = "4.3.0.38"
uiautomator2 = "^2.16.13"
opencv-contrib-python = "4.3.0.38"
opencv-python-headless = "4.3.0.38"
keyboard = "^0.13.5"
retrying = "^1.3.3"
colorlog = "^6.6.0"
pypinyin = "^0.45.0"
rich = "^11.1.0"
cvxpy = "^1.1.18"
cvxopt = "^1.2.7"
brotli = "^1.0.9"
flask = "^2.0.2"
flask-marshmallow = "^0.14.0"
flask-cors = "^3.0.10"
flasgger = "^0.9.5"
easyocr = "^1.4.1"
protobuf = "^3.20.3"
pyperclip = "^1.8.2"
cnocr = "^2.1.0"
skorch = "^0.11.0"
requests = "^2.27.1"
pillow = "8.2.0"
numpy = "1.23.5"
future = "^0.18.2"
werkzeug = "^2.0.3"
argparse = "^1.4.0"
torch = "^1.10.2"
torchvision = "^0.11.3"
tqdm = "^4.62.3"
id-validator = "^1.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
#name = "aliyun"
#url = "http://mirrors.aliyun.com/pypi/simple/"
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
#name = "douban"
#url = "https://pypi.douban.com/simple"
default = true
 